--- a/TODO
+++ b/TODO
@@ -22,6 +22,8 @@ $Id$
 - New Mail indicator
 - Check for new mail button
 
+- rename strutil_after(0 to strutil_behind() :-)
+
 - folders should remember whether they were opened on program shutdown and
   reopen automatically in this case (/Folders/<FolderName>/AutoOpen = TRUE)
   KB: WHY? We have the "list of open folders". Better: have a "Reopen
@@ -39,12 +41,7 @@ $Id$
     + check printing example
   + scroll to cursor
   + cut&paste, different cursor for focus/no focus
-  + URL highlighting is buggy: I don't know how should we fix it without first
-    reading all the docs, but Profile::readEntry() definitely shouldn't be
-    highlighted (well, "Pro" is not) :-)
-  + right mouse button on non-Icon should pop up Message menu
-  + formatting menu?
-
+ 
 - UI things
   + message-related commands should be disabled if there is no selection
     (already works in standalone folder view, but not for main frame)
