Added help, fixed several mail/c-client related bugs.

--- a/TODO
+++ b/TODO
@@ -4,53 +4,28 @@ $Id$
 
 *** things to fix/implement next ***
 
+(I've sorted them a bit by "responsible person". :-) )
+
 - wxLayout mouse clicks don't work, for two reasons:
      1. event ids are not the ones expected, easy to fix
      2. for some reasons ProcessEvents() does not call any event handler...why?
 
-- Deletion of messages doesn't work.
-- Expand in ComposeView is broken: should insert "Formatted_Name <EMail>" and
-  must not treat the whole To: as a single name but properly parse it. How can
-  we expand CC/BCC fields?
-- tons of cclient lib errors (mainly "invalid sequence") whatever I do under
-  Windows - I have no clue :-(
-- sequence invalid bug on close of folder
-- test sl5/slx abiguity in c-client: use -lshadow on libc5 and -lcrypt on glibc2?
-- SentMail folder path should be relative - broken
-- reply mail does not quote original mail but inserts junk (fixed?)
-- reply/forward buttons for messageview/folderview
-- make AdbEdit textctrl accept pasted text
-- make AdbEdit auto-generate a formatted name from first/family-name and prefix/title.
-- add Picture field to Adb
-- update FolderView if mailbox has shrunk  (which callback gets called?)
+- wxLayout: --- working on this, KB ---
+  + cut&paste, different cursor for focus/no focus
 
+- reply/forward buttons for messageview/folderview
+- update FolderView if mailbox has shrunk  (which callback gets called?)
 - New Mail indicator
 - Check for new mail button
 
-- rename strutil_after(0 to strutil_behind() :-)
+
+
 
 - folders should remember whether they were opened on program shutdown and
   reopen automatically in this case (/Folders/<FolderName>/AutoOpen = TRUE)
   KB: WHY? We have the "list of open folders". Better: have a "Reopen
       Folder" menu to toggle this behavious, i.e. add/remove it from that
       list.
-
-- wxOptionsDlg: two conversions from (long) to (int) .... is that ok?
-  + should have "restore defaults", would be nice to be able to do it for
-    one setting only (and not for all of them which is trivial)
-  + can easily get crashed/stuck in endless loop trying to satisfy constraints
-  + Preferences editor should mail oneself for test (MAppBase::VerifySettings)
-
-- wxLayout: --- working on this, KB ---
-  + cut&paste, different cursor for focus/no focus
- 
-- UI things
-  + message-related commands should be disabled if there is no selection
-    (already works in standalone folder view, but not for main frame)
-  + we should somehow merge the toolbars into the main frame toolbar if it
-    shows the folder view, for example
-  + session management
-  + KEYBOARD BINDINGS AND TAB TRAVERSAL (!!IMPORTANT!!)
 
 - Python
   + add remaining (important) interface definitions
@@ -61,7 +36,36 @@ $Id$
 
 - DND with gmc (dead easy, see dnd example :-) )
 
+
+KB: Vadim, could you check the following ADB-wxOptionsDlg please?
+
+- ADB:
+  make AdbEdit textctrl accept pasted text
+  make AdbEdit auto-generate a formatted name from first/family-name and prefix/title.
+  add Picture field to Adb
+
+- wxOptionsDlg: two conversions from (long) to (int) .... is that ok?
+  + should have "restore defaults", would be nice to be able to do it for
+    one setting only (and not for all of them which is trivial)
+  KB: I will add the following through python asap:
+  + Preferences editor should mail oneself for test (MAppBase::VerifySettings)
+
+- UI things
+  + message-related commands should be disabled if there is no selection
+    (already works in standalone folder view, but not for main frame)
+  + we should somehow merge the toolbars into the main frame toolbar if it
+    shows the folder view, for example
+  + session management
+  + KEYBOARD BINDINGS AND TAB TRAVERSAL (!!IMPORTANT!!)
+
+- Expand in ComposeView is broken: should insert "Formatted_Name <EMail>" and
+  must not treat the whole To: as a single name but properly parse it. How can
+  we expand CC/BCC fields?
+
+
 *** to implement in near future ***
+
+- wxFolderView assumes that msg numbers are 1...n - change this to use uids instead.
 
 - Use configure to check for utilities, like help browser. "ReConfigure" menu.
 
@@ -72,6 +76,8 @@ $Id$
 - REMOTE-CONTROL: add support for popping window open and reading a folder of one's choice
   (for being controlled from xbiff like programs)
   idea: listen() on a socket and write socket number to a file ~/.M/socket 
+
+- SendMessageCC should derive from a SendMessage abc
 
 - threading of messages via MessageId/References header lines
   Follow examples in SunExpert journal.
