--- a/doc/README.lyx
+++ b/doc/README.lyx
@@ -1,5 +1,5 @@
-#This file was created by <karsten> Mon Aug 17 19:58:30 1998
-#LyX 0.12 (C) 1995-1998 Matthias Ettrich and the LyX Team
+#This file was created by <karsten> Sun Nov 22 18:21:22 1998
+#LyX 1.0 (C) 1995-1998 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass article
 \language english
@@ -9,7 +9,7 @@
 \paperfontsize 12
 \spacing single 
 \papersize Default
-\paperpackage a4wide
+\paperpackage a4
 \use_geometry 0
 \use_amsmath 0
 \paperorientation portrait
