Added XFace sending support - untested, there are some send problems. Fixed colours in startup splash. Added XFace config to preferences.

--- a/TODO
+++ b/TODO
@@ -15,6 +15,7 @@ $Id$
 - wxLayout: --- working on this, KB ---
   + cut&paste, different cursor for focus/no focus
 
+- test xfaces
 - reply/forward buttons for messageview/folderview
 - only quote the selected text in reply/forward if there is any selection
   (as in XFMail) - very handy
