--- a/TODO
+++ b/TODO
@@ -15,7 +15,6 @@ $Id$
 - wxLayout: --- working on this, KB ---
   + cut&paste, different cursor for focus/no focus
 
-- test xfaces
 - reply/forward buttons for messageview/folderview
 - only quote the selected text in reply/forward if there is any selection
   (as in XFMail) - very handy
@@ -23,12 +22,16 @@ $Id$
 - New Mail indicator
 - Check for new mail button
 
-
+- why is $HOME/.signature sometimes not found?
 - folders should remember whether they were opened on program shutdown and
   reopen automatically in this case (/Folders/<FolderName>/AutoOpen = TRUE)
   KB: WHY? We have the "list of open folders". Better: have a "Reopen
       Folder" menu to toggle this behavious, i.e. add/remove it from that
       list.
+
+- rearrange some preferences pages, distinguish between compose options
+  and compose window layout (BCC label etc)
+- Add the real folder create panel to the folder create notebook
 
 - Python
   + fix Python problems -- what's wrong? No idea why Setup.py doesn't work.
