Fixed some bugs (XFace, MESSAGE/RFC822, ComposeView, toolbars). Added message.xpm.

--- a/doc/Manual.tex
+++ b/doc/Manual.tex
@@ -37,7 +37,7 @@ Written by Karsten Ballüder and Vadim Zeitlin}
 \chapter{Using M }
 
 
-\section{Release Notes\_1001\_}
+\section{Release Notes}
 
 Some quick notes about this release of M.
 
@@ -143,7 +143,7 @@ very welcome to help us port M to those platforms, or to other hardware than
 Intel.
 \end{itemize}
 
-\subsection{Copyright\_1003\_}
+\subsection{Copyright}
 
 M is copyright by Karsten Ballüder and Vadim Zeitlin. It is licensed under the
 M ``Artistic License'' as stated in section\ref{License}. Some part of the
@@ -256,14 +256,14 @@ FITNESS FOR A PARTICULAR PURPOSE.
 \section{The User Interface}
 
 
-\subsection{The Main Window\_2001\_}
+\subsection{The Main Window}
 
 M's main window is vertically divided into two parts. On the left it has a tree
 view of all available mail or news folders. On the right of it, it shows the
 currently selected folder in a folder view(see \ref{FolderView}).
 
 
-\subsection{Folder Views\_2002\_}
+\subsection{Folder Views}
 
 \label{FolderView}A Folder View is a window or part of a window displaying
 the contents of a mail folder or a newsgroup. It consists of two parts:
@@ -274,7 +274,7 @@ etc.
 \item The contents of the currently selected message below.
 \end{itemize}
 
-\subsection{The Open-Folder Dialog\_2004\_}
+\subsection{The Open-Folder Dialog}
 
 Here you can temporarily open a folder without adding it to the main tree of
 folders. This is convenient if you just want to have a quick look at some folder
@@ -304,7 +304,7 @@ folder control invoked by pressing the right mouse button in it.
 \section{Sending Mail}
 
 
-\subsection{Using the address book\_3100\_}
+\subsection{Using the address book}
 
 Although you may directly enter the addresses of recepients of your message
 into the different address fields (``To:``, ``Cc:`` and ``Bcc:`` althought
@@ -532,16 +532,16 @@ If this option is on, a message box will be shown each time new messages are
 received.
 \end{itemize}
 
-\section{The Address Database\_3000\_}
+\section{The Address Database}
 
 
 \subsection{Introduction}
 
 
-\subsection{The native Address Book \_3001\_}
+\subsection{The native Address Book }
 
 
-\subsection{Support for BBDB Address Books\_3002\_}
+\subsection{Support for BBDB Address Books}
 
 \label{BBDB}M supports reading and writing of BBDB address book files. BBDB
 is the Big Brother DataBase used with the Emacs family of editors. If you have
@@ -993,7 +993,7 @@ strictly later than beta 3 and so it is probably easier to take the wxWindows
 sources snapshot from the \emph{M} home page.
 
 
-\chapter{FAQ - Frequently Asked Questions\_1002\_}
+\chapter{FAQ - Frequently Asked Questions}
 
 Being a brand new program, this section is currently empty. However, we will
 constantly update this chapter with questions received on the mailing lists.
