--- a/TODO
+++ b/TODO
@@ -15,6 +15,9 @@ $Id$
 *********************************************************************
 *** not fixed yet:
 *********************************************************************
+ - investigate problem of empty message bodies (e.g. on Micky's mails
+   from the Scottish Office).
+ - Is POP3 really that slow or are we transferring more than needed?
  - ADB: does not use substring??? (Joen_Doedoe no expansion for
    "doe" or "Doe")
  - copying to other folder only writes headers, no content 
